# SyncedAddressBook

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 06268b1fd0f1_added_confirmed_field_to_user_model.py  566807a95767_first_init.py  68e49f81163d_add_user.py  7ce448ffd419_second_init.py
src/: schemas.py  seed.py
src/database/: db.py  models.py  seed_db.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py
src/services/: auth.py  email_service.py
src/services/templates/: email_confirmation.html
